Wave 1: Fix create_jira_bug + docs consolidation + Java deduplication
P1 (partial): Fixed create_jira_bug reading nonexistent scenario.errorMessage by deriving
error from first failed step. Removed xfail marker; all 119 tests now pass.

P2 (complete): RetryTestRunner delegates topo-sort to DependencyResolver, removing duplicate code.
DependencyResolverTest: 8/8 green.

P3 (complete): Consolidated 14 root .md files into docs/ + docs/arsiv/; only README.md
and AGENTS.md remain at root. Removed hardcoded /home/ol_ta paths from README.

https://claude.ai/code/session_01SXyeRa4qtUZ1dHcotW8Myf